# chatTemplates

./: README.md  chattemplates.py  pyproject.toml  requirements.in  requirements.txt
src/chatTemplates/: __main__.py  app.py  main.py
