[project]
name = "chatTemplates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "filelock==3.18.0",
    "fsspec==2025.5.1",
    "h11==0.16.0",
    "hf-xet==1.1.5",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.33.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain-core==0.3.67",
    "langsmith==0.4.4",
    "linkify-it-py==2.0.3",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdit-py-plugins==0.4.2",
    "mdurl==0.1.2",
    "numpy==2.3.1",
    "orjson==3.10.18",
    "packaging==24.2",
    "platformdirs==4.3.8",
    "protobuf==6.31.1",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "safetensors==0.5.3",
    "sentencepiece==0.2.0",
    "sniffio==1.3.1",
    "tenacity==9.1.2",
    "textual==3.5.0",
    "tokenizers==0.21.2",
    "tqdm==4.67.1",
    "transformers==4.53.0",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "uc-micro-py==1.0.3",
    "urllib3==2.5.0",
    "zstandard==0.23.0",
]
