[project]
name = "chatTemplates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langchain-core>=0.3.69",
    "protobuf>=6.31.1",
    "pydantic>=2.11.7",
    "sentencepiece>=0.2.0",
    "textual>=3.5.0",
    "transformers>=4.53.2",
]

[project.scripts]
chattemplate = "chatTemplates.__main__:main"
